--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "react-bootstrap": "^2.1.2",
-        "react-router-dom": "5.3.0"
+        "react-router-dom": "5.3.0",
+        "sweetalert2": "^11.4.2"
     }
 }
